syntax = "proto3";

// If you make any changes make sure you run: make regenerate-proto

package plural.agent.event;

option go_package = "github.com/pluralsh/kuberentes-agent/pkg/event";

import "validate/validate.proto";

message GitPushEvent {
  Project project = 1 [(validate.rules).message.required = true];
}

message Project {
  // The numeric Plural project id
  int64 id = 1 [(validate.rules).int64.gt = 0];
  // The full path to the Plural project
  string full_path = 2 [(validate.rules).string.min_bytes = 1];
}
